Allow nested array types